--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -25,14 +25,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-
     - name: Trivy Installation
-      run: sudo apt-get install wget apt-transport-https gnupg lsb-release -y
-           wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo gpg --dearmor -o /usr/share/keyrings/trivy-archive-keyring.gpg
-           echo "deb [signed-by=/usr/share/keyrings/trivy-archive-keyring.gpg] https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main" | sudo tee /etc/apt/sources.list.d/trivy.list > /dev/null
-           sudo apt-get update -y
-           sudo apt-get install trivy -y
-
+      run: |
+        sudo apt-get install -y wget apt-transport-https gnupg lsb-release
+        wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
+        echo deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main | sudo tee -a /etc/apt/sources.list.d/trivy.list
+        sudo apt-get update -y
+        sudo apt-get install trivy -y
             
     - name: Trivy FS Scan
       run: trivy fs --format table -o fs_scan_report.json .
