--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -6,7 +6,7 @@ on:
   
 jobs:
   compile:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
     - uses: actions/checkout@v4
@@ -21,7 +21,7 @@ jobs:
 
 
   security-check:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: compile
     steps:
     - uses: actions/checkout@v4
