--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -43,4 +43,19 @@ jobs:
       run: gitleaks detect source . -r gitleaks_report.json -f json   
 
 
+  tests:
+      runs-on: self-hosted
+      needs: security-check
+      steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      - name: Unit Test Cases
+        run: mvn test
+
+
 
