--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -69,8 +69,10 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+        
     - name: Build Project
       run: mvn package
+      
     - name: Upload JAR artifact
       uses: actions/upload-artifact@v4
       with:
@@ -107,4 +109,22 @@ jobs:
       with:
         name: app-jar
         path: app  # this will download JAR to ./app folder
+
+        
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ vars.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+    - name: Build and Push Docker image
+      uses: docker/build-push-action@v6
+      with:
+        context: .
+        push: true
+        tags: shubnimkar/bankapp:latest
+        file: ./Dockerfile
 
